--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,11 @@
-// Home Content
 
 .home {
 
   .intro {
-
+    img{
+      border-radius: 8px;
+      width: 100%;
+    }
     h2 {
       padding: 15px;
     }
@@ -24,6 +26,14 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width: 100%;
+      }
+    }
+    .sky, .launch{
+      @media @phone {
+        display: none;
+      }
     }
   }
 
@@ -45,10 +55,18 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      flex-direction: column;
+      padding: 15px;
+      margin-top: 20px;
+    }
 
     .walk-text {
       width: 50%;
-
+      @media @phone {
+        order: 2;
+        width:100%;
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -58,17 +76,36 @@
       }
 
       .btn {
+        .btn-style(#22283A, white, 1.75em, center, none, 8px);
+        max-width: max-content;
+        font-weight: 600;
+        padding: 10px 20px;
+        &:hover {
+            .hover-state(black, white);
+            cursor: pointer;
+          }
+          @media @phone {
+            max-width: none;
+            padding-top: 1.5em;
+            padding-bottom: 1.5em;
+            border-radius: 5px;
+          }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+      @media @phone {
+        .img-adjust(100%, 0)
+      }
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        @media @phone {
+          margin-bottom: 1em;
+        }
       }
     }
   }
