--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
-// Navigation code here
+.navigation{
+    max-width: 1000px;
+    margin: 2em auto 0 auto;
+    text-align: center;
+    background-color: #F6F6F6;
+    padding: 2em 0;
+        h1{
+            font-size: 5em;
+            margin-bottom: 15px;
+        }
+        a{
+            text-decoration: none;
+            color: inherit;
+            font-size: 1.75em;
+            margin: 0 20px;
+            font-weight: 600;
+            cursor: pointer;
+        }
+    
+}
