--- a/css/index.css
+++ b/css/index.css
@@ -303,3 +303,44 @@ footer {
     margin-bottom: 1em;
   }
 }
+.contact-form {
+  display: none;
+}
+.contact-form h1 {
+  justify-self: center;
+  font-size: 2.25em;
+  margin: 1em 0;
+}
+@media (max-width: 500px) {
+  .contact-form {
+    display: grid;
+    grid-template-rows: repeat(6, max-content);
+    padding: 0;
+    grid-row-gap: 10px;
+    max-width: 94%;
+    margin: 3em auto;
+  }
+  .contact-form .form-input,
+  .contact-form .message {
+    border: none;
+    background: #f4f5f7;
+    resize: none;
+    padding: 10px;
+    border: 1px solid #f0eeee;
+    border-radius: 5px;
+    font-size: 1.5em;
+  }
+  .contact-form .message {
+    height: 100px;
+  }
+  .contact-form .submitBtn {
+    width: 100%;
+    margin: 10px auto;
+    padding: 1.5em 20px;
+    background: #22283A;
+    color: white;
+    border: none;
+    font-size: 1.75em;
+    border-radius: 5px;
+  }
+}
