--- a/less/home-page.less
+++ b/less/home-page.less
@@ -110,3 +110,44 @@
     }
   }
 }// home
+.contact-form{
+  display: none;
+  h1{
+    justify-self: center;
+    font-size: 2.25em;
+    margin: 1em 0;
+  }
+}
+@media @phone{
+  .contact-form{
+    display: grid;
+    grid-template-rows: repeat(6, max-content);
+    padding: 0;
+    grid-row-gap: 10px;
+    max-width: 94%;
+    margin: 3em auto;
+
+    .form-input, .message{
+      border: none;
+      background: #f4f5f7;
+      resize: none;
+      padding: 10px;
+      border: 1px solid rgb(240, 238, 238);
+      border-radius: 5px;
+      font-size: 1.5em;
+      }
+      .message{
+        height: 100px;
+      }
+      .submitBtn{
+        width: 100%;
+        margin: 10px auto;
+        padding: 1.5em 20px;
+        background: #22283A;
+        color: white;
+        border: none;
+        font-size: 1.75em;
+        border-radius: 5px;
+    }
+    }
+}
